[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/img/CheckRect.png" type="Texture" id=5]
[ext_resource path="res://assets/img/variations/0/Photoshop.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Tu mejor aliado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 986.0
margin_top = 794.0
margin_right = 1360.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgramSprite" type="Sprite" parent="."]
position = Vector2( 480.414, 464.243 )
texture = ExtResource( 6 )

[node name="CheckRect" type="Sprite" parent="."]
position = Vector2( 1182.62, 415.864 )
texture = ExtResource( 5 )

[node name="CheckBox1" type="CheckBox" parent="CheckRect"]
margin_left = -214.268
margin_top = -132.165
margin_right = -26.2678
margin_bottom = -101.165
theme = ExtResource( 2 )
text = "Ver videos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="CheckRect"]
margin_left = -214.268
margin_top = -75.1654
margin_right = 102.732
margin_bottom = -44.1654
theme = ExtResource( 2 )
text = "Buscar páginas web"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="CheckRect"]
margin_left = -214.268
margin_top = -18.1654
margin_right = 157.732
margin_bottom = 12.8346
theme = ExtResource( 2 )
text = "Editar documentos de texto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox4" type="CheckBox" parent="CheckRect"]
margin_left = -214.268
margin_top = 37.8346
margin_right = 157.732
margin_bottom = 68.8346
theme = ExtResource( 2 )
text = "Editar imágenes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox5" type="CheckBox" parent="CheckRect"]
margin_left = -214.268
margin_top = 93.8346
margin_right = 157.732
margin_bottom = 124.835
theme = ExtResource( 2 )
text = "Construir hojas de cálculo"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="CheckRect/CheckBox1" to="." method="_on_CheckBox1_pressed"]
[connection signal="pressed" from="CheckRect/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="pressed" from="CheckRect/CheckBox3" to="." method="_on_CheckBox3_pressed"]
[connection signal="pressed" from="CheckRect/CheckBox4" to="." method="_on_CheckBox4_pressed"]
[connection signal="pressed" from="CheckRect/CheckBox5" to="." method="_on_CheckBox5_pressed"]
